--- a/client/src/components/LoginForm/Loginform.css
+++ b/client/src/components/LoginForm/Loginform.css
@@ -70,6 +70,10 @@
   margin-right: 4px;
 }
 
+h1 {
+  font-weight: bold;
+}
+
 .loginform .remember-forgot a {
   color: #fff;
   text-decoration: none;
