--- a/client/src/components/RegisForm/Regisform.css
+++ b/client/src/components/RegisForm/Regisform.css
@@ -1,9 +1,8 @@
 .registerbody {
-  height: 100%;
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .error-message {
